src/snapshots/blis__compile__tests__test_programs__err_runtime__bad_math.blis.chunk.snap
---
source: src/compile.rs
description: "println(\"1\" + 1);\n"
input_file: test_programs/err_runtime/bad_math.blis
---
Chunk(
  constants: [
    String("1"),
    Rational(((1, [
      1,
    ]), (1, [
      1,
    ]))),
  ],
  globals: [
    "println",
  ],
  code: [
    39,
    0,
    4,
    0,
    4,
    1,
    56,
    16,
    1,
    1,
    5,
    0,
  ],
)
