src/snapshots/blis__compile__tests__test_programs__err_runtime__bad_math_1.blis.chunk.snap
---
source: src/compile.rs
description: "println(\"1\" + 1);\n"
input_file: test_programs/err_runtime/bad_math_1.blis
---
DisassembledChunk(
  constants: [
    String("1"),
    Rational(((1, [
      1,
    ]), (1, [
      1,
    ]))),
  ],
  globals: [
    "println",
  ],
  code: [
    GetGlobal(0),
    Constant(0),
    Constant(1),
    Add,
    Call(1),
    Pop,
    Nil,
    Return,
  ],
)
