src/snapshots/blis__compile__tests__test_programs__err_runtime__bad_math_2.blis.chunk.snap
---
source: src/compile.rs
description: "println(1 + 2.0);\n"
input_file: test_programs/err_runtime/bad_math_2.blis
---
DisassembledChunk(
  constants: [
    Rational(((1, [
      1,
    ]), (1, [
      1,
    ]))),
    Float(2.0),
  ],
  globals: [
    "println",
  ],
  code: [
    GetGlobal(0),
    Constant(0),
    Constant(1),
    Add,
    Call(1),
    Pop,
    Nil,
    Return,
  ],
)
