src/snapshots/blis__compile__tests__test_programs__err_runtime__redeclare_global.blis.chunk.snap
---
source: src/compile.rs
description: "let a = 1;\nlet a = 2;\n"
input_file: test_programs/err_runtime/redeclare_global.blis
---
DisassembledChunk(
  constants: [
    Rational(((1, [
      1,
    ]), (1, [
      1,
    ]))),
    Rational(((1, [
      2,
    ]), (1, [
      1,
    ]))),
  ],
  globals: [
    "a",
  ],
  code: [
    Constant(0),
    DefineGlobal(0),
    Constant(1),
    DefineGlobal(0),
    Nil,
    Return,
  ],
)
